--- a/package.json
+++ b/package.json
@@ -10,15 +10,25 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4.4.2",
+    "@rainbow-me/animated-charts": "^1.0.0-alpha.6",
+    "axios": "^0.27.2",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
+    "moment": "^2.29.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-moment": "^1.1.2",
     "react-native": "0.68.2",
-    "react-native-web": "0.17.7"
+    "react-native-gesture-handler": "~2.2.1",
+    "react-native-reanimated": "~2.8.0",
+    "react-native-web": "0.17.7",
+    "tailwindcss-react-native": "^1.7.10",
+    "use-axios-client": "^2.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "tailwindcss": "^3.1.6"
   },
   "private": true
 }
